# umbra

./: .gitignore  .vercelignore  PROGRESS.md  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
api/: _config.js  config.js  faucet.js  market.js  submit.js  swap.js
circuits/: build_multiplier.sh  build_transfer.sh  elgamal.circom  multiplier.circom  swap.circom  transfer.circom
client/lib/: auditor.js  crypto.js  encryption.js  extdata.js  identity.js  market.js  onchain.js  scan.js  soroban.js  transaction.js  tree.js  wallet-connect.js
contracts/groth16-verifier/: Cargo.toml
contracts/market/: Cargo.toml
contracts/pool/: Cargo.toml
contracts/poseidon-match/: Cargo.toml
contracts/poseidon-match/src/: lib.rs  test.rs
docs/: DEMO_SCRIPT.md
extension/: README.md
scripts/: bn254_snark_hex.js  demo.js  deploy_market.js  deploy_oracle_pool.js  deploy_swap.js  deploy_swap_demo.js  init_web.js  lifecycle.js  market_seed.js  phase0_deploy_verify.sh  setup_usdc.sh  setup_weth.sh  test_identity.js
test/: 01_local_lifecycle.js  02_negative.js  04_pool_lifecycle.js  05_encryption.js  06_elgamal_match.js  07_enforced_audit.js  08_enforcement.js  09_multiasset.js  10_onchain_spent.js  11_fee_relayer.js  12_solvency.js  13_private_asset.js  14_self_signed_deposit.js  15_deposit_scan.js  16_withdraw.js  18_withdraw_prod.js  19_derive_activity.js  20_send_activity.js  21_auditor.js  22_audit_table.js  23_swap_circuit.js  24_swap_onchain.js
web/: README.md  index.html  server.js  smoke.cjs  vite.config.js  vite.ext.config.js
web/src/: disc.js  (+4 more)
(+19 files in other folders)
