[package]
name = "poseidon-match"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["hazmat-crypto"] }
soroban-poseidon = { git = "https://github.com/stellar/rs-soroban-poseidon" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["hazmat-crypto", "testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
